; ModuleID = '/home/carl/AnghaBench/RetroArch/griffin/extr_..libretro-commonstreamstrans_stream_pipe.c_pipe_set_out.c'
source_filename = "/home/carl/AnghaBench/RetroArch/griffin/extr_..libretro-commonstreamstrans_stream_pipe.c_pipe_set_out.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.pipe_trans_stream = type { i32, i32* }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i8*, i32*, i32)* @pipe_set_out to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @pipe_set_out(i8* %0, i32* %1, i32 %2) #0 {
  %4 = alloca i8*, align 8
  %5 = alloca i32*, align 8
  %6 = alloca i32, align 4
  %7 = alloca %struct.pipe_trans_stream*, align 8
  store i8* %0, i8** %4, align 8
  store i32* %1, i32** %5, align 8
  store i32 %2, i32* %6, align 4
  %8 = load i8*, i8** %4, align 8
  %9 = bitcast i8* %8 to %struct.pipe_trans_stream*
  store %struct.pipe_trans_stream* %9, %struct.pipe_trans_stream** %7, align 8
  %10 = load i32*, i32** %5, align 8
  %11 = load %struct.pipe_trans_stream*, %struct.pipe_trans_stream** %7, align 8
  %12 = getelementptr inbounds %struct.pipe_trans_stream, %struct.pipe_trans_stream* %11, i32 0, i32 1
  store i32* %10, i32** %12, align 8
  %13 = load i32, i32* %6, align 4
  %14 = load %struct.pipe_trans_stream*, %struct.pipe_trans_stream** %7, align 8
  %15 = getelementptr inbounds %struct.pipe_trans_stream, %struct.pipe_trans_stream* %14, i32 0, i32 0
  store i32 %13, i32* %15, align 8
  ret void
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
